--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -7,10 +7,8 @@
   }
 
   &__icon {
-
     display: block;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
 
     @mixin atSmall {
       position: absolute;
@@ -21,14 +19,14 @@
   &__title {
     font-size: 1.6rem;
     font-weight: 300;
-    margin-bottom: .8rem;
     margin-top: .7em;
+    margin-bottom: .8rem;
     text-align: center;
 
     @mixin atSmall {
-      font-size: 1.875rem;
-      margin-tip: 1em;
       text-align: left;
+      margin-top: 1em;
+      font-size: 1.875rem;
     }
   }
 }
