--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -10,24 +10,24 @@
     margin-right: -65px;
   }
 
-  &--gutters-small {
-    margin-right: -45px;
-  }
-
   &--gutters-large {
     margin-right: -100px;
+  }
+
+  &--gutters-small {
+    margin-right: -45px;
   }
 
   &--gutters > div {
     padding-right: 65px;
   }
 
-  &--gutters-small > div {
-    padding-right: 45px;
-  }
-
   &--gutters-large > div {
     padding-right: 100px;
+  }
+
+  &--gutters-small > div {
+    padding-right: 45px;
   }
 
   &__b-margin-until-medium {
@@ -95,8 +95,8 @@
     }
 
   }
-
-  /* Begin equal height rules */
+  
+  /* Begin Equal Height Rules */
   &--equal-height-at-medium {
     @mixin atMedium {
       display: flex;
@@ -106,6 +106,7 @@
       float: none;
       display: flex;
     }
+
   }
 
   &--equal-height-at-large {
@@ -117,7 +118,7 @@
       float: none;
       display: flex;
     }
-  }
 
+  }
 
 }
