--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -1,5 +1,5 @@
 .site-footer {
-  background: $mainBlue;
+  background-color: $mainBlue;
   color: #FFF;
   padding: .5rem 0;
   text-align: center;
@@ -11,8 +11,8 @@
 
     @mixin atMedium {
       display: inline;
+      margin-bottom: 0;
       margin-right: 1.4rem;
     }
   }
-
 }
