--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -5,7 +5,7 @@
 
   @mixin atLarge {
     margin-bottom: 0;
-    padding: 0 1.1825rem 1px 1.1825rem;
+    padding: 0 1.8125rem 1px 1.8125rem;
   }
 
   &--last {
@@ -13,7 +13,7 @@
   }
 
   &__photo {
-    border-radius: 50%;
+    border-radius: 80px;
     overflow: hidden;
     width: 160px;
     height: 160px;
@@ -35,9 +35,7 @@
     color: $mainOrange;
     text-align: center;
     font-weight: 400;
-    font-size: .9375rem;
-    margin: .25rem 1.25rem;
-    padding-bottom: .5rem;
+    font-size: 0.9375rem;
+    margin: .25rem 0 1rem 0;
   }
 }
-
