--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,7 +10,12 @@
   }
   
   @mixin atMedium {
+    position: fixed;
     background-color: rgba($mainBlue, .3);
+
+    &--dark {
+      background-color: rgba(23, 51, 72, .85);
+    }
   }
 
   &__btn-container {
@@ -23,6 +28,7 @@
     position: absolute;
     top: 0;
     left: 50%;
+    transition: transform .3s ease-out;
     transform: translateX(-50%) scale(.8);
     transform-origin: 50% 0;
     background-color: $mainBlue;
@@ -31,6 +37,10 @@
     @mixin atMedium {
       left: auto;
       transform: translateX(0);
+
+      .site-header--dark & {
+        transform: scale(.55);
+      }
     }
   }
 
@@ -41,7 +51,6 @@
   &__menu-icon {
     width: 20px;
     height: 19px;
-
     position: absolute;
     z-index: 10;
     top: 10px;
@@ -55,11 +64,10 @@
       width: 20px;
       height: 3px;
       background-color: #FFF;
-      border-radius: 2px;
       transform-origin: 0 0;
       transition: transform .3s ease-out;
     }
-    
+
     &__middle {
       position: absolute;
       top: 8px;
@@ -67,20 +75,18 @@
       width: 20px;
       height: 3px;
       background-color: #FFF;
-      border-radius: 2px;
       transition: all .3s ease-out;
       transform-origin: 0 50%;
     }
-    
+
     &::after {
       content: "";
       position: absolute;
-      top: 16px;
+      bottom: 0;
       left: 0;
       width: 20px;
       height: 3px;
       background-color: #FFF;
-      border-radius: 2px;
       transform-origin: 0 100%;
       transition: transform .3s ease-out;
     }
